Bug 85389 - [ILK Bisected]Rendercheck blend fails
Summary: [ILK Bisected]Rendercheck blend fails
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 85404 85407 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-24 03:39 UTC by lu hua
Modified: 2014-10-27 05:59 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2014-10-24 03:39:46 UTC
System Environment:
--------------------------
Platform: ILK
Libdrm:		(master)libdrm-2.4.58-4-g00847fa48b83a85b0cb882594a12ed1511f780db
Mesa:		(master)9ad80d1d1876493b45428b5f81b03add3ae8150e
Xserver:	(master)xorg-server-1.16.0-419-g942e18e17e334d7a25f8c1dcc6f5c3711eeb6a7d
Xf86_video_intel:(master)2.99.916-114-ga8d1eaf6ee1fed0aeff681d33864e17cb904ddd3
Libva:		(master)ccd93de5a707e92a629cccd595757c8d436fa3cc
Libva_intel_driver:(master)f11176415ec26eb5960ba6841d2d9c22f2cabc60
Kernel:   (drm-intel-nightly)77683b77aa4da6e1788838dad2d2a15b0dfc290b

Bug detailed description:
---------------------------
It fails on ILK. It's Xf86_video_intel regression.
Bisect shows: b4872f74c05a92c91d7b57146eb35ed2ecc86d97 is the first bad commit
commit b4872f74c05a92c91d7b57146eb35ed2ecc86d97
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Tue Oct 21 10:38:22 2014 +0100
Commit:     Chris Wilson <chris@chris-wilson.co.uk>
CommitDate: Tue Oct 21 20:30:21 2014 +0100

    sna: Avoid pwriting large batches

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


output:
rendercheck 1.4
Render extension version 0.11
Window format: r8g8b8
Found server-supported format: a8
Found server-supported format: a8r8g8b8
Found server-supported format: x8r8g8b8
Found server-supported format: b8g8r8a8
Found server-supported format: b8g8r8x8
Found server-supported format: r8g8b8
Found server-supported format: b8g8r8
Found server-supported format: r5g5b5
Found server-supported format: b5g5r5
Found server-supported format: x1r5g5b5
Found server-supported format: x1b5g5r5
Found server-supported format: r5g6b5
Found server-supported format: b5g6r5
Found server-supported format: x8b8g8r8
Found server-supported format: x2r10g10b10
Found server-supported format: x2b10g10r10
Beginning blend test on a8
Xor blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  0.000 0.000 0.000 0.000
src color: 0.00 0.00 0.00 1.00 (a8)
dst color: 0.00 0.00 0.00 1.00
src: 1x1R a8, dst: a8
Beginning blend test on a8r8g8b8
Xor blend test error of 255.0000 at (0, 0) --
           R     G     B     A
got:       0.000 0.000 0.000 1.000
expected:  0.000 0.000 0.000 0.000
src color: 0.00 0.00 0.00 1.00 (a8)
dst color: 0.00 0.00 0.00 1.00
src: 1x1R a8, dst: a8r8g8b8
Beginning blend test on x8r8g8b8
Beginning blend test on b8g8r8a8
Beginning blend test on b8g8r8x8
Beginning blend test on r8g8b8
Beginning blend test on b8g8r8
Beginning blend test on r5g5b5
Beginning blend test on b5g5r5
Beginning blend test on x1r5g5b5
Beginning blend test on x1b5g5r5
Beginning blend test on r5g6b5
Beginning blend test on b5g6r5
Beginning blend test on x8b8g8r8
Beginning blend test on x2r10g10b10
Beginning blend test on x2b10g10r10
Beginning blend test on r8g8b8 window
15 tests passed of 17 total
Successful Groups:


Reproduce steps:
-------------------------
1. xinit
2. ./rendercheck -o src,over,overreverse,xor -t blend
Comment 1 Chris Wilson 2014-10-24 08:28:39 UTC
commit 4df0052a21efd744c4b8cb2409139ded6e45f5c8
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Oct 24 08:08:23 2014 +0100

    sna: Update the reloc->delta for the shrunk batch
    
    As well as actually updating the value in the batch for the relocation
    address, we need to tell the kernel in case it has to update the
    address.
    
    Another regression from
    commit b4872f74c05a92c91d7b57146eb35ed2ecc86d97
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Tue Oct 21 10:38:22 2014 +0100
    
        sna: Avoid pwriting large batches
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=85389
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 Chris Wilson 2014-10-24 12:03:57 UTC
*** Bug 85404 has been marked as a duplicate of this bug. ***
Comment 3 Chris Wilson 2014-10-24 15:12:09 UTC
*** Bug 85407 has been marked as a duplicate of this bug. ***
Comment 4 lu hua 2014-10-27 05:59:24 UTC
Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.