sna: Update the reloc->delta for the shrunk batch

As well as actually updating the value in the batch for the relocation
address, we need to tell the kernel in case it has to update the
address.

Another regression from
commit b4872f74c05a92c91d7b57146eb35ed2ecc86d97
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Oct 21 10:38:22 2014 +0100

    sna: Avoid pwriting large batches

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=85389
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>